# DRCalo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setenv_LCG.sh  setup.sh  setup_key4hep.sh
AnalysisTools/: CMakeLists.txt
DR_CMakeTools/scripts/: setup_sh.in
Digitization/DRDigitization/: CMakeLists.txt
Digitization/DRDigitization/include/: DigitSteer.h  FiberDigitizer.h
Digitization/DRDigitization/python/: test_digitization.py  test_readpodio.py
Digitization/DRDigitization/src/: DigitSteer.cxx  FiberDigitizer.cxx
Digitization/DRDigitization/utils/: RunDRDigitization.cxx
NtupleConverters/: CMakeLists.txt
NtupleConverters/include/: B4TreeInterface.h
NtupleConverters/macros/: UpdateG4Tree.sh  UpdateG4tree.cxx
NtupleConverters/scripts/: UpdateG4Tree.sh
NtupleConverters/src/: B4TreeInterface.cxx
NtupleConverters/utils/: ConvertB4ToDRsim.cxx  NtupHitsFromEventTxt.cxx  UpdateG4tree.cxx
Reconstruction/ClusterReconstruction/: CMakeLists.txt  setup.sh
Reconstruction/ClusterReconstruction/include/: ClusterRecAlgorithms.h  ClusterRecSteer.h  ConvertToEdm4Hep.h  FiberDigitizer.h
Reconstruction/ClusterReconstruction/oldstuff/: ClusterFiberCalibrate.cxx  ClusterFiberCalibrate.h  FiberDigitizeAndCalibrate.cxx  FiberDigitizeAndCalibrate.h
Reconstruction/ClusterReconstruction/src/: ClusterFiberCalibrate.cxx  ClusterRecAlgorithms.cxx  ClusterRecSteer.cxx  ConvertToEdm4Hep.cxx  FiberDigitizer.cxx
Reconstruction/ClusterReconstruction/utils/: ConvertRawOutputToEDM4Hep.cxx  TestClusterRecSteer.cxx  test_podio.cxx  test_readpodio.cxx
Reconstruction/DdAndCalibration/: CMakeLists.txt
Reconstruction/DdAndCalibration/include/: DR_CaloGridHelper.h  DR_GeometryHelper.h
Reconstruction/DdAndCalibration/src/: DR_CaloGridHelper.cxx  DR_GeometryHelper.cxx
Reconstruction/DdAndCalibration/utils/: TestGridHelper.cxx
